<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alignmentMode="alignMargins"
    android:rowCount="7"
    android:columnCount="4"
    android:layout_margin="2dp">

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/exit"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/seven"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/divide"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="performAction"/>

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/nine"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/eight"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/four"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/five"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/six"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/multiply"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="performAction"
        />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/one"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/two"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/three"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/minus"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="performAction"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/clear"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="clearText"/>

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_margin="1dp"
        android:background="@drawable/button_number_rounded_rect"
        android:text="@string/zero"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/dot"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="updateTextView"/>

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_margin="1dp"
        android:background="@drawable/button_action_rounded_rect"
        android:text="@string/plus"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="performAction"
        />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:layout_margin="1dp"
        android:background="@drawable/rounded_rect"
        android:text="@string/equal"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:onClick="performAction"
        />



</GridLayout>
