<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/r_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_main_title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_rect"
        android:textColor="@color/colorWhite"
        />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_text1"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/r_main_title"/>

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_text2"
        android:layout_marginLeft="16dp"
        android:layout_alignBottom="@id/tv_1"
        android:layout_toRightOf="@id/tv_1"
        />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_text3"
        android:layout_marginRight="16dp"
        android:layout_alignRight="@id/r_main_title"
        android:layout_below="@id/tv_1"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="16dp"
        android:text="@string/relative_name_tag" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_toRightOf="@id/tv_name"
        android:layout_alignTop="@id/tv_name"
        android:layout_alignRight="@id/r_main_title"
        android:layout_marginTop="-16dp"
        android:layout_marginLeft="16dp"
        />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:layout_alignLeft="@id/et_name"
        android:layout_below="@id/et_name"
        android:layout_alignRight="@id/et_name"
        android:onClick="backToMain"
        />

</RelativeLayout>