<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textAlignment="center"
                android:textSize="16sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/relative_layout"
                    android:contentDescription="@string/relative_layout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rl_description"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="24dp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relative_layout"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/constraint_layout"
                    android:contentDescription="Constraint Layout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cl_description"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="24dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_ConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/constraint_layout"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/grid_layout"
                    android:contentDescription="Grid Layout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gl_description"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="24dp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_GridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grid_layout"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark" />
    </LinearLayout>
</ScrollView>